<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/you_can_add_new_airline_with_a_flight_from_here"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:textSize="30sp"
        tools:ignore="MissingConstraints" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/airline_name"
            android:gravity="center_horizontal"
            android:textSize="20sp"/>
        <EditText
        android:id="@+id/airlineName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:inputType="text"
        android:minEms="6"
        android:textAlignment="center"
            android:autofillHints=""
            tools:ignore="LabelFor" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/flight"
            android:gravity="center_horizontal"
            android:textSize="20sp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ExtraText">
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/flight_number"
                android:gravity="center_horizontal" />
            <EditText
                android:id="@+id/flightNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:minEms="3"
                android:textAlignment="center"
                android:autofillHints=""
                android:inputType="number"
                tools:ignore="LabelFor,TextFields" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/source"
                android:gravity="center_horizontal" />
            <EditText
                android:id="@+id/src"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:ems="3"
                android:maxLength="3"
                android:textAlignment="center"
                android:autofillHints=""
                android:inputType="text"
                tools:ignore="LabelFor" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/depart_date_time"
                android:gravity="center_horizontal" />
            <EditText
                android:id="@+id/departDateTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:ems="20"
                android:textAlignment="center"
                android:autofillHints=""
                android:inputType="text"
                tools:ignore="LabelFor,TextFields" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/destination"
                android:gravity="center_horizontal" />
            <EditText
                android:id="@+id/dest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:ems="3"
                android:maxLength="3"
                android:textAlignment="center"
                android:autofillHints=""
                android:inputType="text"
                tools:ignore="LabelFor,TextFields" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/arrival_date_time"
                android:gravity="center_horizontal" />
            <EditText
                android:id="@+id/arriveDateTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:ems="20"
                android:textAlignment="center"
                android:autofillHints=""
                android:inputType="text"
                tools:ignore="LabelFor,TextFields" />


        </LinearLayout>

        <Button
            android:id="@+id/addNewFlight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:onClick="addNewFlight"
            android:text="@string/add"
            android:textAlignment="center"
            tools:ignore="RtlCompat" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>